# portfolio-website

./: .env.example  Cargo.toml  tailwind.config.js
.github/workflows/: rust.yml
src/: hbs.rs  main.rs  tests.rs
src/backend/: main.rs
src/pages/: base.html
src/static/: input.css  main.js  style.css  styles.css
src/static/css/: styles.css
src/templates/: base copy.html  base.html  contact.html  home.html  layout.html.hbs  projects.html
src/templates/error/: 404.html.hbs
src/templates/pages/: index.html.hbs
src/templates/partials/: footer.hbs  head.html.hbs  header.html.hbs  sidebar.html.hbs
templates/: base.hbs
templates/pages/: about.hbs  contact.hbs  index.hbs  portfolio.hbs
templates/partials/: footer.hbs  head.hbs  header.hbs  sidebar.hbs
