[package]
name = "portfolio-website"
version = "0.1.0"
edition = "2024"

[dependencies]
handlebars = "6.3.2"
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0"

[lib]
