[package]
name = "portfolio-website"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
serde = {version = "1.0.228", features = ["derive"] }
tera = "1.20.1"
tower-http = { version = "0.6.8", features = ["fs", "set-header", "compression-br"] } 
lettre = "0.11.19"
dotenvy = "0.15.7"
reqwest = { version = "0.13.1", features = ["json", "multipart"] }
serde_json = "1.0.148"
regex = "1.12.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
